--- a/Week 5/CodingDay/01_exercise/style.css
+++ b/Week 5/CodingDay/01_exercise/style.css
@@ -4,6 +4,7 @@ h1 {
 }
 
 .robots {
+	margin: 0 auto;
 }
 
 .head, 
@@ -24,7 +25,7 @@ h1 {
 } 
 
 .eyes {
-	
+	display: flex;
 }
 
 .head:hover {
@@ -36,6 +37,7 @@ h1 {
 	width: 300px; 
 	height: 150px;
 	display: flex; 
+	margin: 0 auto;
 } 
 
 .left_arm, .right_arm { 
@@ -63,7 +65,7 @@ h1 {
 	height: 200px;
 	/* This is another useful property. Hmm what do you think it does?*/
 	margin: 0 auto;
-
+    display: flex;
 } 
 
 .left_leg, .right_leg { 
